test/org/midica/testfiles/failing/eff-func-cont-nrpn.midica
INCLUDE inc/instruments.midica


0: nrpn=123.line(1,12)
